# xash3d-nodemod

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yaml  nightly-builds.yaml
cmake/: VcpkgIntegration.cmake
example/: package-lock.json  package.json
example/assets/: webmap.html
example/src/: ads.js  asg.js  blueFade.js  fastdl.js  index.js  rampageSounds.js  serverMenu.js  vampirism.js  webmap.js  welcome.js
scripts/: buildEvents.js  customs.js  fileMaker.js  generator.js  package-lock.json  util.js
src/: nodemod.def
src/auto/: dll_events.cpp  dll_functions.cpp  engine_events.cpp  engine_functions.cpp  events.cpp  hooks.cpp
src/bindings/: bindings.cpp  bindings.hpp  functions.cpp  players.cpp
src/common/: logger.cpp  logger.hpp
src/lib/: dllapi.cpp  engine_api.cpp  meta_api.cpp  public.cpp
src/node/: events.cpp  events.hpp  functions.cpp  functions.hpp  nodeimpl.cpp  nodeimpl.hpp  resource.cpp  resource.hpp  utils.hpp
src/structures/: entity.cpp  structures.hpp
src/util/: convert.hpp
vcpkg_ports/hlsdk/: add-archtypes-header.patch  add-sequence-header.patch  portfile.cmake  vcpkg.json
vcpkg_ports/metamod/: add-missing-include.patch  portfile.cmake  vcpkg.json
